--- a/hidden-search/index.html
+++ b/hidden-search/index.html
@@ -11,10 +11,12 @@
 </head>
 <body>
     <div class="container">
-        <input type="text" placeholder="search" class="box">
-        <div class="search">
+        <input type="text" class="box" placeholder="" >
+        <button class="btn active">
             <i class="fas fa-search"></i>
-        </div>
+        </button>
+        
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
