--- a/split-landing-page/index.html
+++ b/split-landing-page/index.html
@@ -8,10 +8,17 @@
 </head>
 <body>
     <div class="container">
-        <div class="bg">
-            <p>Testing</p>
+        <div class="bg left">
+            <p>Taiwan</p>
+            <a href="#">visit now</a>
+        </div>
+        <div class="bg right">
+            <p>Japan</p>
+            <a href="#">visit now</a>
         </div>
     </div>
+
+    
     <script src="script.js"></script>
 </body>
 </html>
