--- a/form-wave-animation/index.html
+++ b/form-wave-animation/index.html
@@ -11,11 +11,11 @@
         <p>Please Login</p>
         <form>
             <div class="form-control">
-                <input type="text">
+                <input type="text" required>
                 <label>Email</label>
             </div>
             <div class="form-control">
-                <input type="text">
+                <input type="text" required>
                 <label>Password</label>
             </div>
             <button class="btn">Login</button>
